[package]
name = "sha-1"
version = "0.4.1"
authors = ["The RustCrypto Devs"]
license = "MIT/Apache-2.0"
description = "SHA-1 hash function"
documentation = "https://docs.rs/sha-1"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "sha1", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
byte-tools = "0.2"
block-buffer = "0.3"
digest = "0.6"
generic-array = "0.8"
sha1-asm = {version="0.4", optional=true}

[dev-dependencies]
crypto-tests = "0.5"

[features]
asm = ["sha1-asm"]

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
